courses/430_programming-languages/assignment-4/tests/error/error06.sml
val prog =
  PROGRAM
    {decls=[],
     stmts=[ST_EXP {exp=EXP_BINARY {lft=EXP_NUM 3,opr=BOP_MOD,rht=EXP_NONE}}]}
  : program
;
